--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,43 @@
+/* TODO: use display switch? */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 200;
+  src: local(''),
+  url(fonts/inter-v2-latin-200.woff2) format('woff2'),
+  url(fonts/inter-v2-latin-200.woff) format('woff');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+  url(fonts/inter-v2-latin-regular.woff2) format('woff2'),
+  url(fonts/inter-v2-latin-regular.woff) format('woff');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+  url(fonts/inter-v2-latin-700.woff2) format('woff2'),
+  url(fonts/inter-v2-latin-700.woff) format('woff');
+}
 * {
   margin: 0;
   padding: 0;
 }
-
 body {
+  background-color: black;
+}
+div.page-wrap {
   background-image: url(assets/desktop/bg-image-daytime.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: Inter, 'Trebuchet MS', sans-serif;
+  height: 100vh;
+  max-height: 800px;
+  margin: 15px auto;
+  width: 100vw;
+  max-width: 1440px;
 }
